--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,4 +1,11 @@
-a {
-  margin-right: 15px;
-  color: 'red';
+@import './shared/fonts';
+
+// PAGES
+@import './shared/index';
+
+html,
+body {
+  height: 100%;
+  width: 100%;
+  font-family: 'Montserrat', 'Helvetica';
 }
