- Add: portforlio card style

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -2,10 +2,11 @@
 @import './shared/colors';
 
 // PAGES
-@import './shared/index';
+@import './index';
+@import './portforlios';
 
 // COMPONENTS
-@import './shared/header';
+@import './header';
 
 html,
 body {
