--- a/styles/main.scss
+++ b/styles/main.scss
@@ -32,7 +32,7 @@ body {
 
 .base-page {
   padding-top: 150px;
-  color: white;
+  color: black;
   background-color: #ecedee;
   min-height: 100vh;
 
