--- a/styles/main.scss
+++ b/styles/main.scss
@@ -30,6 +30,11 @@ body {
   position: absolute;
 }
 
+.error {
+  font-weight: 700;
+  color: red;
+}
+
 .base-page {
   padding-top: 150px;
   color: black;
